<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/storeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/store_title"
            android:textStyle="bold"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/secretInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_secret"
            android:background="@android:color/white"/>

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:background="@android:color/white"/>

        <EditText
            android:id="@+id/masterPassInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_master"
            android:background="@android:color/white"/>

        <EditText
            android:id="@+id/viewPassInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_view"
            android:background="@android:color/white"/>

        <EditText
            android:id="@+id/dateInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_date"
            android:background="@android:color/white"/>

        <Button
            android:id="@+id/storeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/store_button"
            android:backgroundTint="@color/green"
            android:textColor="@color/bg_dark"/>

        <TextView
            android:id="@+id/storeResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"/>

    </LinearLayout>
</ScrollView>
