<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/retrieveTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retrieve_title"
            android:textStyle="bold"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/idInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_id"
            android:background="@android:color/white"/>

        <EditText
            android:id="@+id/passInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:background="@android:color/white"/>

        <Button
            android:id="@+id/retrieveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retrieve_button"
            android:backgroundTint="@color/green"
            android:textColor="@color/bg_dark"/>

        <TextView
            android:id="@+id/retrieveResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"/>

    </LinearLayout>
</ScrollView>
